--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-eligibility.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-eligibility.html
@@ -85,7 +85,9 @@
                 </fieldset>
             </div>
 
-            <div class="form-group" th:classappend="${#fields.hasErrors('researchParticipationAmountId')} ? 'form-group-error'">
+            <div class="form-group"
+                 th:classappend="${#fields.hasErrors('researchParticipationAmountId')} ? 'form-group-error'"
+                 th:if="${!#arrays.isEmpty(model.researchParticipationAmounts)}">
                 <fieldset class="inline">
                     <legend id="researchParticipationAmountId">
                         <span class="form-label-bold">Research participation</span>
@@ -170,7 +172,14 @@
                 <dd th:text="${model.leadApplicantTypesText}"></dd>
 
                 <dt>Research participation</dt>
-                <dd th:each="(researchParticipationAmount : ${model.researchParticipationAmounts})" th:if="${researchParticipationAmount.id == competitionSetupForm.researchParticipationAmountId}" th:text="${researchParticipationAmount.name}">Research category</dd>
+                <dd th:each="(researchParticipationAmount : ${model.researchParticipationAmounts})"
+                    th:if="${researchParticipationAmount.id == competitionSetupForm.researchParticipationAmountId}"
+                    th:text="${researchParticipationAmount.name}">
+                    Research participation amount
+                </dd>
+                <dd th:if="${#arrays.isEmpty(model.researchParticipationAmounts)}">
+                    None
+                </dd>
 
                 <dt>Are resubmissions allowed?</dt>
                 <dd th:text="${#strings.capitalize(competitionSetupForm.resubmission)}"></dd>
