IFS-1566 refractoring of Attend Panel box

--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-dashboard.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-dashboard.html
@@ -158,8 +158,8 @@
                                            th:text="${assessmentPanelAccept.competitionName}"/>
                                     </h3>
 
-                                    <div th:if="${assessmentPanelAccept.awaitingApplications == 0}" class="action-required">
-                                        <strong>0 applications awaiting review | applications to be added soon</strong>
+                                    <div th:if="${assessmentPanelAccept.awaitingApplications == 0}">
+                                        Applications awaiting review will be added here.
                                     </div>
 
                                     <div th:if="${assessmentPanelAccept.awaitingApplications > 0}" class="action-required">
