IFS-366 Code style

--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/question-type/form-elements.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/question-type/form-elements.html
@@ -197,7 +197,9 @@
         <div class="form-footer">
 
             <div class="form-footer__actions">
-                <th:block th:insert="question-type/form-elements :: ready-for-review" th:unless="${model.assignButtonsViewModel.currentUserIsLead}" th:with="displayBlock=${true}, model=${model.assignButtonsViewModel}" />
+                <th:block th:insert="question-type/form-elements :: ready-for-review"
+                          th:unless="${model.assignButtonsViewModel.currentUserIsLead}"
+                          th:with="displayBlock=${true}, model=${model.assignButtonsViewModel}" />
 
                 <th:block th:unless="${model.closed and !model.summary}">
 
