IFS-50: Show link only for IFs admin user

--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/unsuccessful-applications.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/unsuccessful-applications.html
@@ -40,8 +40,8 @@
                 <td th:text="${#messages.msg('ifs.application.unsuccessful.' + row.applicationState.getStateName())}">Not funded</td>
                 <td>
                     <a
-                        th:href="@{/competition/{cid}/applications/mark-successful/application/{aid}(cid=${row.competition}, aid=${row.id})}"
-                        th:text="'Mark application ' + ${row.id} +  ' as successful'">link text</a>
+                        th:if="${model.ifsAdmin}" th:href="@{/competition/{cid}/applications/mark-successful/application/{aid}(cid=${row.competition}, aid=${row.id})}"> mr marvino
+                    </a>
                 </td>
             </tr>
             </tbody>
