IFS-1138 Added integration test and updates for review comments

--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-competition-for-panel-dashboard.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-competition-for-panel-dashboard.html
@@ -63,7 +63,7 @@
 
                     <ul>
                         <li th:each="app,iterStat : ${model.applications}"
-                            th:with="assignmentUrl=@{/{assessmentId}/assignment(assessmentId=${app.assessmentId})}"
+                            th:with="reviewUrl=@{/{reviewId}/review(reviewId=${app.reviewId})}"
                             th:class="${(app.pending ? 'status-2-col' : '')}">
 
                             <th:block>
