--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-competition-for-panel-dashboard.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-competition-for-panel-dashboard.html
@@ -46,22 +46,13 @@
     </div>
 
     <div class="my-applications">
-
-        <th:block th:if="${ #lists.isEmpty(model.applications) }">
-                <div class="task">
-                    <h3 class="heading-small">No applications have been assigned to this panel.</h3>
-                </div>
-        </th:block>
-
-        <div class="in-progress" th:unless="${#lists.isEmpty(model.applications)}">
-
             <form method="post" th:object="${form}" th:action="@{${#ifsUtil.formPostUri(#httpServletRequest)}}">
-
                 <div class="progress-list">
                     <h2 class="heading-medium no-margin">Applications for Panel (<span
                         th:text="${#lists.size(model.applications)}"/>)</h2>
 
                     <ul>
+
                         <li th:each="app,iterStat : ${model.applications}"
                             th:with="reviewUrl=@{/{reviewId}/review(reviewId=${app.reviewId})}"
                             th:class="${(app.pending ? 'status-2-col' : '')}">
@@ -92,12 +83,21 @@
                             </th:block>
 
                         </li>
+                        <th:block th:if="${ #lists.isEmpty(model.applications) || model.afterPanelDate }">
+                            <li class="status-2-col">
+                                <div class="task">
+                                    <h3 class="heading-small">No applications have been assigned to this panel.</h3>
+                                </div>
+                            </li>
+                        </th:block>
                     </ul>
                 </div>
-
             </form>
-        </div>
     </div>
+
+    <p class="extra-margin form-hint">
+        Please complete your review of the applications before the panel date. You cannot edit or add feedback to applications at this stage.
+    </p>
 
     <th:block th:insert="fragments/layout :: main-content-end" />
 </main>
