IFS-1138 Update to panel links from dashboard if post panel date

--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-competition-for-panel-dashboard.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-competition-for-panel-dashboard.html
@@ -83,7 +83,7 @@
                             </th:block>
 
                         </li>
-                        <th:block th:if="${ #lists.isEmpty(model.applications) || model.afterPanelDate }">
+                        <th:block th:if="${#lists.isEmpty(model.applications)}">
                             <li class="status-2-col">
                                 <div class="task">
                                     <h3 class="heading-small">No applications have been assigned to this panel.</h3>
