--- a/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/grant-offer-letter.html
+++ b/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/grant-offer-letter.html
@@ -21,15 +21,21 @@
     <form th:object="${form}" th:action="@{${#ifsUtil.formPostUri(#httpServletRequest)}}" method="post" enctype="multipart/form-data">
 
         <th:block th:if="${model.submitted}">
-          <th:block th:unless="${model.offerApproved}">
+          <th:block th:unless="${model.grantOfferLetterApproved}">
               <p>The signed grant offer letter has been received by Innovate UK and is awaiting review.</p>
               <p>The unsigned grant offer letter is available for your records.</p>
           </th:block>
 
-          <div th:if="${model.offerApproved}" class="success-alert extra-margin-bottom">
+          <div th:if="${model.grantOfferLetterApproved}" class="success-alert extra-margin-bottom">
               <p>Your signed grant offer letter has been received and accepted by Innovate UK</p>
           </div>
-          <p th:if="${model.offerApproved}">The grant offer letter is available for your records below.</p>
+        </th:block>
+
+        <th:block th:if="${model.showGrantOfferLetterRejectedMessage}">
+            <div class="warning-alert extra-margin-bottom">
+                <h2>Your grant offer letter has been rejected by Innovate UK.</h2>
+                <p>Someone will be in touch with you soon.</p>
+            </div>
         </th:block>
 
         <th:block th:if="${model.leadPartner}">
@@ -50,7 +56,7 @@
             <h2 class="heading-medium">Grant offer letter</h2>
             <p th:unless="${model.submitted}">This document is awaiting signature by the Project Manager.</p>
 
-            <th:block th:if="${model.isGrantOfferLetterSent()}">
+            <th:block th:if="${model.grantOfferLetterSent}">
                 <p><a th:href="@{/project/{id}/offer/grant-offer-letter(id=${model.projectId})}" th:text="${model.grantOfferLetterFile?.filename} + ' (opens in a new window)'" target="_blank" class="grant-offer-download">Grant offer letter 2016-07-28a.PDF</a></p>
             </th:block>
 
@@ -65,7 +71,7 @@
                 <p><a th:href="@{/project/{id}/offer/additional-contract(id=${model.projectId})}" th:text="${model.additionalContractFile?.filename} + ' (opens in a new window)'" target="_blank">Grant offer letter 2016-07-28a.PDF</a></p>
             </th:block>
 
-            <div th:if="${model.isGrantOfferLetterSent() and !model.submitted and model.getGrantOfferLetterFile() != null}" class="upload-section">
+            <div th:if="${model.grantOfferLetterSent and !model.submitted and model.grantOfferLetterFile != null}" class="upload-section">
                 <h2 class="heading-medium">Sending your signed grant offer letter to Innovate UK</h2>
                 <h2 class="heading-small no-margin">Upload signed grant offer letter</h2>
                 The Project Manager is required to provide a signed copy of the grant offer letter.
@@ -94,11 +100,11 @@
                 </th:block>
             </div>
 
-            <th:block th:if="${model.isGrantOfferLetterSent()}">
-                <a th:if="${model.isShowSubmitButton()}"
+            <th:block th:if="${model.grantOfferLetterSent}">
+                <a th:if="${model.showSubmitButton}"
                    th:href="@{${#ifsUtil.formPostUri(#httpServletRequest)} + '/confirmation'}"
                    data-js-modal="modal-confirm-grant-offer-letter" class="button">Send to Innovate UK</a>
-                <button th:if="${model.isGrantOfferLetterSent() and model.isShowDisabledSubmitButton()}"
+                <button th:if="${model.grantOfferLetterSent and model.showDisabledSubmitButton}"
                         disabled="disabled" class="button">Send to Innovate UK
                 </button>
             </th:block>
@@ -109,9 +115,9 @@
         </th:block>
 
         <th:block th:if="${!model.leadPartner}">
-            <th:block th:if="${!model.submitted}">
-                <p th:if="${!model.offerApproved}">The grant offer letter has been provided by Innovate UK. It has been created using the information provided during project setup. It is now awaiting signature by the lead applicant.</p>
-                <p th:if="${!model.offerApproved}">A copy of the unsigned grant offer letter is available for your records.</p>
+            <th:block th:if="${!model.submitted && !model.grantOfferLetterApproved}">
+                <p>The grant offer letter has been provided by Innovate UK. It has been created using the information provided during project setup. It is now awaiting signature by the lead applicant.</p>
+                <p>A copy of the unsigned grant offer letter is available for your records.</p>
             </th:block>
 
             <h2 class="heading-medium">Grant offer letter</h2>
