--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-competition-for-panel-dashboard.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-competition-for-panel-dashboard.html
@@ -63,7 +63,7 @@
 
                     <ul>
                         <li th:each="app,iterStat : ${model.applications}"
-                            th:with="assignmentUrl=@{/{assessmentId}/assignment(assessmentId=${app.assessmentId})}"
+                            th:with="assignmentUrl=@{/review/{reviewId}(reviewId=${app.reviewId})}"
                             th:class="${(app.pending ? 'status-2-col' : '')}">
 
                             <th:block>
@@ -81,7 +81,7 @@
                                             Pending
                                         </div>
                                         <div class="status-msg msg-progress">
-                                            <a class="disabled" aria-disabled="true">Accept or reject</a>
+                                            <a th:href="${assignmentUrl}">Accept or reject</a>
                                         </div>
                                     </th:block>
 
